--- a/packages/ui-components/src/foundations/base/controls.scss
+++ b/packages/ui-components/src/foundations/base/controls.scss
@@ -28,7 +28,6 @@ textarea {
 input:focus-visible,
 select:focus-visible,
 textarea:focus-visible {
-  @include field-focus;
   @include focus-ring;
 }
 
